fix(style): remove extra space at top-pages (#363)
* fix: remove extra space 

* Update src/layout/index.tsx


---------

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,7 @@
     flex-direction: row;
     font-family: Heebo;
 }
+
+.page-title{
+    margin-top: 0;
+}
